# label_image

./: .envrc  .gitignore  .pre-commit-config.yaml  ACTIVATE_GITHUB_PAGES.md  DEPLOYMENT_STATUS.md  Makefile  README.md  README_ANALYSE_MODELES.md  README_TESTING.md  TESTING_STRATEGY.md  TEST_AUTO_PR.md  TEST_SUMMARY.md  branch_protection_develop.json  branch_protection_main.json  branch_protection_restore.json  branch_protection_update.json  branch_protection_update_final.json  branch_protection_update_no_reviews.json  class_index.html  conftest.py  coverage.json  function_index.html  index.html  pixi.toml  protection.json  pyproject.toml  pytest.ini  status.json  test_trigger.md  update_protection.json  z_145eef247bfb46b6___init___py.html  z_dd52281f56f5d51f___init___py.html  z_dd52281f56f5d51f_clustering_py.html  z_dd52281f56f5d51f_features_py.html  z_dd52281f56f5d51f_monitoring_py.html  z_dd52281f56f5d51f_preprocessing_py.html  z_dd52281f56f5d51f_semi_supervised_py.html  z_e5ccf62099f28249___init___py.html  z_e5ccf62099f28249_augmentation_py.html  z_e5ccf62099f28249_dataset_py.html  (+8 more)
.githooks/: pre-commit
.github/: auto-merge.yml  pull_request_template.md
.github/workflows/: auto-merge.yml  ci.yml
_bmad/_config/: manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmgd/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/agents/: COM.md  LEAD.md
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/core/tasks/: workflow.xml
data/: cluster_labels_final.npy  cluster_mapping_k2.json  features_pca.npy  features_pca_50d.npy  features_resnet50.npy  features_resnet50_test.npy  image_paths.npy  indices.npz  semi_supervised_split.npz  true_labels.npy  weak_labels_kmeans.npy
docs/: CI_CD_SETUP.md  PRESENTATION.md  contenu-autoeval.md
notebooks/: 01_exploratory_analysis.ipynb  01_exploratory_analysis_final.ipynb  01_non-supervise.ipynb  02_feature_extraction.ipynb  02_feature_extraction_updated.ipynb  02_supervise.ipynb  03_clustering_weak_labels.ipynb  03_model_comparison_analysis_updated.ipynb  04_semi_supervised_training.ipynb  05_evaluation_analysis.ipynb
presentation/: evaluation_data.json
results/: clustering_results.json  final_evaluation.json  semi_supervised_results.json  semi_vs_supervised_comparison.json
scripts/: extract_coverage.py
src/: __init__.py
src/api/: __init__.py  dashboard.py  main.py
src/data/: __init__.py  augmentation.py  dataset.py  loader.py
src/model/: __init__.py  clustering.py  features.py  monitoring.py  preprocessing.py  semi_supervised.py
src/utils/: __init__.py  config.py  logging.py  visualization.py
test-deploy/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_dd52281f56f5d51f___init___py.html  z_dd52281f56f5d51f_clustering_py.html  z_dd52281f56f5d51f_features_py.html  z_dd52281f56f5d51f_monitoring_py.html  z_dd52281f56f5d51f_preprocessing_py.html  z_dd52281f56f5d51f_semi_supervised_py.html  z_e5ccf62099f28249___init___py.html  z_e5ccf62099f28249_augmentation_py.html  z_e5ccf62099f28249_dataset_py.html  z_e5ccf62099f28249_loader_py.html  z_f0e24b7f04f99860___init___py.html  z_f0e24b7f04f99860_dashboard_py.html  z_f0e24b7f04f99860_main_py.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_config_py.html  z_f1b38b22aeb65474_logging_py.html  z_f1b38b22aeb65474_visualization_py.html
tests/: test_augmentation.py  test_auto_pr_dummy.py  test_basic.py  test_clustering.py  test_dashboard.py  test_logging.py  test_monitoring.py  test_visualization.py
